--- a/HRAssist/employee_leaveform.html
+++ b/HRAssist/employee_leaveform.html
@@ -147,7 +147,7 @@
         </div>
 
 
-        <button type="submit"class="btn btn-primary w-40 shadow-sm" style="width: 6vw;">Submit</button>
+        <button type="submit"class="leave_btn" style="width: 6vw;">Submit</button>
       </form>
     </section>
   </div>
