--- a/HRAssist/employee_home.html
+++ b/HRAssist/employee_home.html
@@ -82,7 +82,7 @@
       <section class="inner-page">
         <div class="container">
           <div class="buttons">
-            <button class="button1"><a href="employee_leaveform.html" style="color: aliceblue;">+ Request Leave</a></button>
+            <button class="button1"><a href="employee_leaveform.html" style="color: aliceblue; text-decoration: none;">+ Request Leave</a></button>
             <button class="button2">+ Request Pass Slip</button>
             <button class="button3">+ DTR</button>
         </div>
