--- a/HRAssist/employee_leaveform.html
+++ b/HRAssist/employee_leaveform.html
@@ -85,15 +85,15 @@
 
   <main id="main">
 
- <section class="inner-page">
+    <section class="inner-page">
       <div class="container">
         <div class="buttons">
-          <button class="button1"><a href="employee_leaveform.html" style="color: aliceblue;">+ Request Leave</a></button>
+          <button class="button1"><a href="employee_leaveform.html" style="color: aliceblue; text-decoration: none;">+ Request Leave</a></button>
           <button class="button2">+ Request Pass Slip</button>
           <button class="button3">+ DTR</button>
       </div>
       </div>
-  </section>
+    </section>
 
   <br><br><br><br><br><br><br><br>
   <div class="container mt-5 m-lg-auto p-5 shadow">
