--- a/HRAssist/employee_home.html
+++ b/HRAssist/employee_home.html
@@ -77,24 +77,131 @@
 
   <main id="main">
 
+    <section class="inner-page">
+      <div class="container">
+        <div class="buttons">
+          <button class="button1">+ Request Leave</button>
+          <button class="button2">+ Request Pass Slip</button>
+          <button class="button3">+ DTR</button>
+      </div>
+      </div>
+    </section>
+
+  <br><br><br><br><br><br><br><br>
+  
+    <section class="leave-request">
+      <div class="container mt-5 m-lg-auto p-5 shadow">
+        <header">
+        <h2 style="left: 2vw;">Leave Request Form</h2>
+        <hr>
+      </header>
+      <!-- Form -->
+
+      <form id="LeaveRequestForm">
+        <!-- Name -->
+        <div class="row mb-2">
+          <label class="form-label">Name</label>
+          <div class="col">
+            <input type="text" class="form-control" placeholder="First Name" id="FirstName"/>
+          </div>
+
+          <div class="col">
+            <input  type="text"class="form-control" placeholder="Last Name" id="LastName"/>
+          </div>
+        </div>
+
+        <div class="mb-3">
+          <label for="leavetype" class="form-label">Leave Type</label>
+          <select class="form-select" id="leavetype" name="leavetype" required>
+            <option value="">Select a leave type</option>
+            <option value="sick">Sick</option>
+            <option value="vacation">Vacation</option>
+            <option value="maternity">Maternity</option>
+            <option value="paternity">Paternity</option>
+            <option value="bereavement">Bereavement</option>
+          </select>
+        </div>
+
+
+        <div class="row mb-3">
+          <div class="col">
+            <label class="form-label">Start date</label>
+            <input type="date" class="form-control" id="StartDate" />
+          </div>
+          <div class="col">
+            <label class="form-label">End date</label >
+              <input type="date" class="form-control" id="EndDate" />
+          </div>
+        </div>
+
+        <div class="mb-3">
+          <label for="reason" class="form-label">Reason</label>
+          <textarea class="form-control" id="reason" name="reason" rows="3" required></textarea>
+        </div>
+
+
+        <button type="submit"class="leave_btn" style="width: 6vw;">Submit</button>
+      </form>
+
+      </div>
+    </section>
+
+
+    <section class="locator-request">
+      <div class="container mt-5 m-lg-auto p-5 shadow">
+        <header">
+        <h2 style="left: 2vw;">Locator Slip Form</h2>
+        <hr>
+      </header>
+      <!-- Form -->
+
+      <form id="LocatorForm">
+        <!-- Name -->
+        <div class="row mb-2">
+          <label class="form-label">Name</label>
+          <div class="col">
+            <input type="text" class="form-control" placeholder="First Name" id="locator_FirstName"/>
+          </div>
+
+          <div class="col">
+            <input  type="text"class="form-control" placeholder="Last Name" id="locator_LastName"/>
+          </div>
+       </div>
+
+        <div class="mb-3">
+          <label class="form-label">Purpose</label>
+          <div class="col">
+            <input type="text" class="form-control" placeholder="Purpose" id="Purpose"/>
+          </div>
     
-
-      <section class="inner-page">
-        <div class="container">
-          <div class="buttons">
-            <button class="button1"><a href="employee_leaveform.html" style="color: aliceblue; text-decoration: none;">+ Request Leave</a></button>
-            <button class="button2">+ Request Pass Slip</button>
-            <button class="button3">+ DTR</button>
         </div>
+
+
+        <div class="row mb-3">
+          <div class="col">
+            <label class="form-label">Start date</label>
+            <input type="date" class="form-control" id="locator_StartDate" />
+          </div>
+          <div class="col">
+            <label class="form-label">End date</label >
+              <input type="date" class="form-control" id="locator_EndDate" />
+          </div>
         </div>
-      </section>
+
+        <div class="mb-3">
+          <label for="reason" class="form-label">Reason</label>
+          <textarea class="form-control" id="reason" name="reason" rows="3" required></textarea>
+        </div>
+
+
+        <button type="submit"class="locator_btn" style="width: 6vw;">Submit</button>
+      </form>
+
+      </div>
+    </section>
+
    
-
-
-   
-
-  </main><!-- End #main -->
-
+ </main><!-- End #main -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
@@ -117,56 +224,9 @@
   </script>
 
 <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      let itemsAppended = false;
-      let mobileNav = document.querySelector('.navbar ul');
-      let profileDropdown = document.querySelector('.action .menu ul');
-      let changePasswordItem = profileDropdown.children[0].cloneNode(true);
-      let logoutItem = profileDropdown.children[1].cloneNode(true);
-  
-      function removeIcons(item) {
-        item.querySelectorAll('i').forEach(icon => icon.remove());
-      }
-  
-      function appendToMobileNav() {
-        if (!itemsAppended && mobileNav) {
-          var mobileNavList1 = document.createElement("li");
-          mobileNavList1.appendChild(changePasswordItem.cloneNode(true));
-          mobileNavList1.classList.add('profile-item');
-          removeIcons(mobileNavList1);
-          mobileNav.appendChild(mobileNavList1);
-  
-          var mobileNavList2 = document.createElement("li");
-          mobileNavList2.appendChild(logoutItem.cloneNode(true));
-          mobileNavList2.classList.add('profile-item');
-          removeIcons(mobileNavList2);
-          mobileNav.appendChild(mobileNavList2);
-  
-          itemsAppended = true;
-        }
-      }
-  
-      function handleResize() {
-        if (window.innerWidth <= 768) {
-          appendToMobileNav();
-        } else if (window.innerWidth > 768 && itemsAppended) {
-          let profileItems = document.querySelectorAll('.profile-item');
-          profileItems.forEach(function (item) {
-            mobileNav.removeChild(item);
-          });
-          itemsAppended = false;
-        }
-      }
-  
-      // Add event listener for window resize
-      window.addEventListener('resize', handleResize);
-  
-      // Call the function initially
-      if (window.innerWidth <= 768) {
-        appendToMobileNav();
-      }
-    });
-  </script>
+ 
+</script>
+
 </body>
 
 </html>
