changes in index.html

--- a/HrAdmin/index.html
+++ b/HrAdmin/index.html
@@ -163,6 +163,7 @@
               </a>
             </li>
 
+
             <li class="nav-item">
               <a class="nav-link" href="pages/tables/basic-table.html">
                 <span class="menu-title">Job Vacancy</span>
@@ -172,6 +173,25 @@
 
             <li class="nav-item">
               <span class="text-secondary text-small">EMPLOYEE REGISTRATION</span>
+              </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="pages/tables/basic-table.html">
+                <span class="menu-title">Employee Registry</span>
+                <i class="mdi mdi-account-check menu-icon"></i>
+              </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="pages/tables/basic-table.html">
+                <span class="menu-title">Search Employee</span>
+                <i class="mdi mdi-account-search menu-icon"></i>
+              </a>
+            </li>
+
+            <li class="nav-item">
+              <span class="text-secondary text-small">EMPLOYEE TOOLS</span>
               </a>
             </li>
 
