--- a/HRAssist/employee_home.html
+++ b/HRAssist/employee_home.html
@@ -100,7 +100,7 @@
       <form id="LeaveRequestForm">
         <!-- Name -->
         <div class="row mb-2">
-          <label class="form-label">Name po</label>
+          <label class="form-label">Name</label>
           <div class="col">
             <input type="text" class="form-control" placeholder="First Name" id="FirstName"/>
           </div>
