--- a/HRAssist/HRAssist/index.html
+++ b/HRAssist/HRAssist/index.html
@@ -159,29 +159,33 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            <h4 class="title"><a href="">Job Vacancies</a></h4>
+            <p class="description">LGU positions can serve as valuable platforms to build and refine your abilities, fostering personal and professional growth.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            <h4 class="title"><a href="">Employee</a></h4>
+            <p class="description">Ensuring that our employees are content in their roles, positive work environment, boost morale, and ultimately enhance overall productivity.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            <h4 class="title"><a href="">Performance</a></h4>
+            <p class="description">Achieved a commendable performance rate, demonstrating excellence and dedication in their initiatives to serve the community effectively.</p>
           </div>    
         </div>
       </div>
     </section><!-- End Services Section -->
     
       <!-- ======= About Section ======= -->
-      <div class="section-title">
-        < div class="container">
-        <h2>Why Us</h2>
-        <p>Explore exciting career opportunities that align with your skills and aspirations. Be part of our dynamic workforce, where your contributions make a difference in the lives of our community members. Join us in shaping a brighter future for San Vicente, Camarines Norte </p>
-      </div>
+      <section id="why-us" class="why-us">
+        <div class="container">
+  
+          <div class="section-title">
+            <h2>Why Us</h2>
+            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem.
+              Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. 
+              Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          </div>
       
       <section id="about" class="about">
         <div class="container">
