--- a/HRAssist/employee_home.html
+++ b/HRAssist/employee_home.html
@@ -80,8 +80,8 @@
     <section class="inner-page">
       <div class="container">
         <div class="buttons">
-          <button class="button1">+ Request Leave</button>
-          <button class="button2">+ Request Pass Slip</button>
+          <button class="button1">+ Leave</button>
+          <button class="button2">+ Pass Slip</button>
           <button class="button3">+ DTR</button>
       </div>
       </div>
@@ -200,6 +200,54 @@
       </div>
     </section>
 
+
+      <!-- ======================= Cards ================== -->
+      <div class="cardBox">
+        <div class="card">
+            <div>
+                <div class="numbers">15</div>
+                <div class="cardName">Sick Leave</div>
+            </div>
+
+            <div class="iconBx">
+                <ion-icon name="eye-outline"></ion-icon>
+            </div>
+        </div>
+
+        <div class="card">
+            <div>
+                <div class="numbers">80</div>
+                <div class="cardName">Vacation Leave</div>
+            </div>
+
+            <div class="iconBx">
+                <ion-icon name="cart-outline"></ion-icon>
+            </div>
+        </div>
+
+        <div class="card">
+            <div>
+                <div class="numbers">0</div>
+                <div class="cardName">Maternity Leave</div>
+            </div>
+
+            <div class="iconBx">
+                <ion-icon name="chatbubbles-outline"></ion-icon>
+            </div>
+        </div>
+
+        <div class="card">
+            <div>
+                <div class="numbers">30</div>
+                <div class="cardName">Bereavement Leave</div>
+            </div>
+
+            <div class="iconBx">
+                <ion-icon name="cash-outline"></ion-icon>
+            </div>
+        </div>
+    </div>
+
    
  </main><!-- End #main -->
 
@@ -222,10 +270,6 @@
         toggleMenu.classList.toggle('active')
     }
   </script>
-
-<script>
- 
-</script>
 
 </body>
 
