--- a/HRAssist/HRAssist/index.html
+++ b/HRAssist/HRAssist/index.html
@@ -182,9 +182,8 @@
   
           <div class="section-title">
             <h2>Why Us</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem.
-              Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. 
-              Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <p>LGU San Vicente offers a unique opportunity due to their exceptional commitment to community development. 
+              Their innovative initiatives, dedicated team, and collaborative approach make it an ideal environment for professional growth.</p>
           </div>
       
       <section id="about" class="about">
