Updated content in example.txt

--- a/HRAssist/HRAssist/login.html
+++ b/HRAssist/HRAssist/login.html
@@ -31,12 +31,9 @@
         <div class="form-container sign-up">
             <form>
                 <h1>Create Account</h1>
-              
-                <span>or use your email for registeration</span>
-                <input type="text" placeholder="Name">
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
-                <button>Sign Up</button>
+                <button>Login</button>
             </form>
         </div>
         
