--- a/HrAdmin/manage_applicant_view.html
+++ b/HrAdmin/manage_applicant_view.html
@@ -264,8 +264,22 @@
                         <div class="table_header">
                             <p>List of Applicants</p>
                             <div>
+                                <button style="background-color: #08533F; color: #ffffff; padding: 10px 20px;">+ Add New</button>
+                            </div>
+                        </div>
+                        <div class="table_header">
+                            <p>Filter</p>
+                            <div class="dropdown" style="margin: 0 0 0 -800px;">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    All
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"><a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Another action</a>
+                                    <a class="dropdown-item" href="#">Something else here</a>
+                                </div>
+                              </div>
+                            <div>
                                 <input placeholder="Applicant"/>
-                                <button class="add_new">+ Add New</button>
                             </div>
                         </div>
                         <div class="table-section">
