--- a/HRAssist/employee_home.html
+++ b/HRAssist/employee_home.html
@@ -12,6 +12,8 @@
     <link href="assets/img/favicon.png" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+
 </head>
 
 
@@ -46,16 +48,16 @@
                 </li>
 
                 <li>
-                    <a href="#">
+                    <a href="employee_contactus.html">
                         <span class="icon">
-                            <ion-icon name="settings-outline"></ion-icon>
+                            <ion-icon name="call-outline"></ion-icon>
                         </span>
-                        <span class="title">Settings</span>
+                        <span class="title">Contact Us</span>
                     </a>
                 </li>
 
                 <li>
-                    <a href="#">
+                    <a href="employee_changepass.html">
                         <span class="icon">
                             <ion-icon name="lock-closed-outline"></ion-icon>
                         </span>
@@ -96,7 +98,7 @@
                 </div>
               </section>
 
-              <br><br><br><br><br><br>
+              <br><br><br><br>
 
             <!-- ======================= Cards ================== -->
             <div class="cardBox">
@@ -315,6 +317,8 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+
+   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
 
 
 </body>
