--- a/HRAssist/employee_home.html
+++ b/HRAssist/employee_home.html
@@ -66,7 +66,7 @@
                 </li>
 
                 <li>
-                    <a href="#">
+                    <a href="employee_loginform.html">
                         <span class="icon">
                             <ion-icon name="log-out-outline"></ion-icon>
                         </span>
