--- a/HRAssist/employee_contactus.html
+++ b/HRAssist/employee_contactus.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Employee | Dashboard</title>
+    <title>Employee | Contact Us</title>
     <!-- ======= Styles ====== -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/employeeview.css">
 
     <link href="assets/img/favicon.png" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -57,6 +57,15 @@
                 </li>
 
                 <li>
+                    <a href="employee_profile.html">
+                        <span class="icon">
+                            <ion-icon name="person-outline"></ion-icon>
+                        </span>
+                        <span class="title">Profile</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="employee_changepass.html">
                         <span class="icon">
                             <ion-icon name="lock-closed-outline"></ion-icon>
@@ -87,7 +96,6 @@
                     <img src="assets/img/user.png" alt="">
                 </div>
             </div>
-
 
 
     <!-- =========== Scripts =========  -->
