--- a/HRAssist/employee_home.html
+++ b/HRAssist/employee_home.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee | Dashboard</title>
     <!-- ======= Styles ====== -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/employeeview.css">
 
     <link href="assets/img/favicon.png" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -53,6 +53,15 @@
                             <ion-icon name="call-outline"></ion-icon>
                         </span>
                         <span class="title">Contact Us</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="employee_profile.html">
+                        <span class="icon">
+                            <ion-icon name="person-outline"></ion-icon>
+                        </span>
+                        <span class="title">Profile</span>
                     </a>
                 </li>
 
