--- a/HrAdmin/applicantprof.html
+++ b/HrAdmin/applicantprof.html
@@ -1,4 +1,3 @@
-<!---->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,7 +6,7 @@
     <title>Applicant Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/app_prof.css" rel="stylesheet">
+    <link href="app_prof.css" rel="stylesheet">
 </head>
 
 <body>
@@ -164,7 +163,7 @@
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">Personal Information</i></h6>
+                            <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">Educational Background</i></h6>
                         <!-- Personal Information Card -->
 
                                 <table>
@@ -419,6 +418,9 @@
                         </div>
                     </div>
                 </div>
+        </div>
+        </div>
+
     <script src="app_prof.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
@@ -428,4 +430,3 @@
 </body>
 
 </html>
-
