--- a/HrAdmin/offices.html
+++ b/HrAdmin/offices.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Dashboard</title>
+    <title>Offices</title>
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <!-- End plugin css for this page -->
@@ -253,21 +253,80 @@
         </nav>
         <!-- partial -->
         <div class="main-panel">
-          <div class="content-wrapper">
-            <div class="page-header">
-              <h3 class="page-title">
-                <span class="page-title-icon bg-gradient-primary text-white me-2">
-                  <i class="mdi mdi-home"></i>
-                </span> Dashboard
-              </h3>
-              <nav aria-label="breadcrumb">
-                <ul class="breadcrumb">
-                  <li class="breadcrumb-item active" aria-current="page">
-                    <span></span>Overview <i class="mdi mdi-alert-circle-outline icon-sm text-primary align-middle"></i>
-                  </li>
-                </ul>
-              </nav>
+            <div class="content-wrapper">
+                <div class="page-header">
+                    <h3 class="page-title">
+                      <span class="page-title-icon bg-gradient-primary text-white me-2">
+                        <i class="mdi mdi-home"></i>
+                      </span> Offices
+                    </h3>
+                    <div>
+                      <button style="background-color: #08533F; color: #ffffff; padding: 10px 20px; margin-right: 20px;">+ Add Organization</button>
+                  </div>
+                  </div>
+
+                <div class="organization-container">
+                    <a class="org-link" href="forms/add_organization.html">
+                        <div class="details">
+                            <div class="org-left">
+                                <img class="org-logo" src="assets/images/favicon.ico" alt="Organization Logo" width="80" height="80"/>
+                            </div>
+                            <div class="org-right">
+                                <h3 class="org-name">San Vicente</h3>
+                                <div class="num-orgmember">
+                                    <img src="assets/images/offices/members.png"/> 32 Members
+                                </div>
+                            </div>
+                        </div>
+                    </a> 
+                </div> 
+                <div class="organization-container">
+                    <a class="org-link" href="forms/add_organization.html">
+                        <div class="details">
+                            <div class="org-left">
+                                <img class="org-logo" src="assets/images/favicon.ico" alt="Organization Logo" width="80" height="80"/>
+                            </div>
+                            <div class="org-right">
+                                <h3 class="org-name">San Vicente</h3>
+                                <div class="num-orgmember">
+                                    <img src="assets/images/offices/members.png"/> 32 Members
+                                </div>
+                            </div>
+                        </div>
+                    </a> 
+                </div> 
+                <div class="organization-container">
+                    <a class="org-link" href="forms/add_organization.html">
+                        <div class="details">
+                            <div class="org-left">
+                                <img class="org-logo" src="assets/images/favicon.ico" alt="Organization Logo" width="80" height="80"/>
+                            </div>
+                            <div class="org-right">
+                                <h3 class="org-name">San Vicente</h3>
+                                <div class="num-orgmember">
+                                    <img src="assets/images/offices/members.png"/> 32 Members
+                                </div>
+                            </div>
+                        </div>
+                    </a> 
+                </div>  
+                <div class="organization-container">
+                    <a class="org-link" href="forms/add_organization.html">
+                        <div class="details">
+                            <div class="org-left">
+                                <img class="org-logo" src="assets/images/favicon.ico" alt="Organization Logo" width="80" height="80"/>
+                            </div>
+                            <div class="org-right">
+                                <h3 class="org-name">San Vicente</h3>
+                                <div class="num-orgmember">
+                                    <img src="assets/images/offices/members.png"/> 32 Members
+                                </div>
+                            </div>
+                        </div>
+                    </a> 
+                </div>                
             </div>
+        </div>  
     <!-- plugins:js -->
     <script src="assets/vendors/js/vendor.bundle.base.js"></script>
     <!-- endinject -->
