--- a/HrAdmin/index.html
+++ b/HrAdmin/index.html
@@ -224,7 +224,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="pages/tables/basic-table.html">
+              <a class="nav-link" href="reports.html">
                 <span class="menu-title">Reports</span>
                 <i class="mdi mdi-chart-line menu-icon"></i>
               </a>
