--- a/HrAdmin/reports.html
+++ b/HrAdmin/reports.html
@@ -295,9 +295,9 @@
                 <div class = acc>
                     <img loading="lazy" src="assets/images/reports/gift-solid 1 (1).png" class="imgrewards" />
                     <div class="rewards">Rewards</div>
-                    <div class = "listnadd">
-                        <div class="listofapp">List of Rewards</div>
-                        <hr>
+                    <div class = "listnaddrew">
+                        <div class="listofrew">List of Rewards   
+                        </div>
                     </div>
                 </div>
                 <div class="container mt-5">
@@ -569,7 +569,7 @@
                         </select>
                         <div class="search-container">
                             <input type="text" id="search" placeholder="Search" class="search">
-                            <img loading="lazy" src="assets/Search Icon.png" class="search-icon" alt="Search">
+                            <img loading="lazy" src="assets/images/reports/Search Icon.png" class="search-icon" alt="Search">
                         </div>
                     </div>
                     <div class="table-container1">
