--- a/HrAdmin/reports.html
+++ b/HrAdmin/reports.html
@@ -512,7 +512,7 @@
                     </div>
                     <div class = "filter-container">
                         <label for="filter" class="filter-label">Filter</label>
-                        <select name="filter" class="form-select" data-el="form-select">
+                        <select name="filter" class="form-select_app" data-el="form-select">
                         <option value="All">All</option>
                         <option value="Accounting">Pending</option>
                         <option value="HR">Scheduled</option>
@@ -540,7 +540,7 @@
                             <td>11-12-2023</td>
                             <td>Pending</td>
                             <td class="view-container">
-                                <button class="view-btn" onclick="redirectToApplicantProf()">View</button>
+                                <button id="view-btn" onclick="redirectToApplicantProf()">View</button>
                             </td>
                             </tr>
                             <!-- Add more rows as needed -->
